--- a/style.css
+++ b/style.css
@@ -7,11 +7,9 @@ li { list-style: none; }
 	float: left;
 }
 
-.box { 
-	display: flex;
-}
+
 body {
-	font-family: ProximaNova
+	font-family: '微软雅黑'
 }
 
 
@@ -19,7 +17,8 @@ body {
 	width: 100px; 
 	height: 100vh; 
 	background: #1d2531;
-	position: relative;
+	position: fixed;
+	z-index: 6;
 }
 .nav_menu { 
 	position: absolute; 
@@ -48,7 +47,10 @@ body {
 	height: 100vh; 
 	background: #222c3c; 
 	padding: 0 25px; 
-	position: relative;
+	position: fixed;
+	margin-left: 100px;
+	z-index: 6;
+}
 }
 .submenu { 
 	border-bottom: 1px solid #5b6779; 
@@ -114,10 +116,9 @@ body {
 /* main style */
 
 .main{ 
-	flex: 1; 
-	min-height: 100vh; 
-	display: flex;
-	flex-direction: column;
+
+	margin-left: 350px;
+
 }
 .main_header { 
 	border: 1px solid #e6e9ec; 
@@ -125,6 +126,16 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: fixed;
+    left: 350px;
+    top: 0px;
+    right: 0px;
+    z-index: 8;
+    padding: 20px;
+    background-color: white;
+	z-index: 6;
+    box-sizing: border-box;
+
 }
 .main_header_left {
 	font-size: 24px;
@@ -158,13 +169,14 @@ body {
 .main_header_right_dropdown {
 	margin-right: 25px;
 }
-main { 
-	flex: 1; 
-	display: flex;
+.submain { 
+	padding-top:80px;
+	position: relative;
 }
 .main_aside { 
-	width: 399px;
+	width: 400px;
 	border-right: 1px solid #e6e9ec;
+	box-sizing: border-box;
  }
  .main_aside_search { 
  	height: 69px; 
@@ -204,6 +216,7 @@ main {
 .section_up {
 	display: flex;
 	align-items: center;
+	z-index: 1;
 
 	
 }
@@ -248,6 +261,9 @@ main {
 
 .main_article { 
 	flex: 1;  
+	position: absolute;
+	top: 0;
+	left: 400px;
 }
 .article_header { 
 	height: 69px; 
@@ -259,7 +275,7 @@ main {
 	background: url(img/article_header_status.png) no-repeat 150px center;
 	font-size: 18px;
 	color: #585d68;
-	flex: 0 0 60%;
+	flex: 0 0 50%;
 	padding-left: 30px;
 	font-weight: bolder;
 }
